<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference
        android:key="twitch_memes"
        android:title="@string/twitch_memes"
        android:summary="@string/summary_twitch_memes"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="reddit_memes"
        android:title="@string/reddit_memes"
        android:summary="@string/summary_reddit_memes"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="misc_memes"
        android:title="@string/misc_memes"
        android:summary="@string/summary_misc_memes"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="4chan_memes"
        android:title="@string/four_chan_memes"
        android:summary="@string/summary_four_chan_memes"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="dota_memes"
        android:title="@string/dota_memes"
        android:summary="@string/summary_dota_memes"
        android:defaultValue="false"
        />
    <CheckBoxPreference
        android:key="hearthstone_memes"
        android:title="@string/hearthstone_memes"
        android:summary="@string/summary_hearthstone_memes"
        android:defaultValue="false"
        />
</PreferenceScreen>